@@ -1,3 +1,6 @@
+Sat Jan 17 18:56:34 MET 1998 hannes
+   * changes for TEST_MAC_ORDER, part 3 (binom.cc, binom.h, spSpolyLoop.cc)
+
 Sat Jan 17 18:21:15 MET 1998 hannes
 	* removed duplicate _memcpyW from mmalloc.c
 	* fixed type cast in iplib.cc
